# loglib

./: .gitignore  CMakeLists.txt  Log.h
TDDLIB/: Test.h
tests/: Construction.cpp  LogTags.h  Tags.cpp  Util.h  main.cpp
